- Fixed issue with ads and images not appearing - Fixed issues with ad sizing on mobile

--- a/scss/_advertisements.scss
+++ b/scss/_advertisements.scss
@@ -51,6 +51,13 @@
 	width: 90%;
 }
 
+.ad-container-medium-rectangle
+{
+	height: 250px;
+	margin: auto;
+	width: 300px;
+}
+
 .ad-container-sponsor-frontpage
 {
 	border: 1px solid green;
