--- a/scss/_generic.scss
+++ b/scss/_generic.scss
@@ -57,9 +57,10 @@
 		
 		.flex-sidebar
 		{
+			@include box-sizing(border-box);
 			border: none;
 			display: inline-block;
-			padding: 0px;
+			padding: 10px;
 			width: 100%;
 		}
 	}
