--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -2,7 +2,7 @@
 {
 	padding-bottom: 15px;
 	padding-top: 15px;
-	width: 300px;
+	width: 100%;
 }
 
 .sidebar-title
@@ -74,7 +74,7 @@
 		margin-bottom: 10px;
 		outline: none;
 		padding: 5px;
-		width: 300px;
+		width: 100%;
 	}
 	
 	.button
